# vector-index

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  URI_SEARCH_IMPLEMENTATION_PLAN.md  shell.nix
python/: merge_csv.py  siglip2_embedding_server.py  split_npz.py
src/: CreateWorkData.cpp  README.md  createUSearchIndex.cpp  mergeData.cpp  searchUSearchIndex.cpp  searchUSearchIndex_server.cpp
src/index/app/: main.cpp
src/index/common/: fifo_cache.hpp  types.hpp
src/index/embedding/: client.cpp  client.hpp
src/index/http/: handlers.cpp  handlers.hpp  server.cpp  server.hpp
src/index/image/: downloader.cpp  downloader.hpp  sift_reranker.cpp  sift_reranker.hpp
src/index/search/: metadata.cpp  metadata.hpp  model.hpp  service.cpp  service.hpp
src/index/sparql/: parser.cpp  parser.hpp  response_formatter.cpp  response_formatter.hpp
